# paule

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  TODO.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/examples/: continue_planning.py  example_continue_planning.py  load_and_visualize.py  minimal_example.py
doc/source/: conf.py  development.rst  index.rst
docs/: requirements.txt
docs/examples/: continue_planning.py  load_and_visualize.py  minimal_example.py
docs/source/: about.rst  conf.py  credits.rst  development.rst  index.rst  installation.rst  paule.rst  training.rst
paule/: __init__.py  grad_plan.py  gradient_planning.ipynb  models.py  paule.py  util.py  visualize.py
paule/vocaltractlab_api/: JD2.speaker  VocalTractLabApi.dylib  libVocalTractLabApi.dylib
tests/: test_paule.py
tests/resources/: target_acoustics.flac
